--- a/mijnwerk.html
+++ b/mijnwerk.html
@@ -30,7 +30,7 @@
                 Voor één van mijn promotie video's, heb ik de intro van Netflix's Narcos, nagemaakt in de game Rust. 
             </p>
             <video width="620" height="440" autoplay loop muted>
-                <source src="video/los_narcos_low_bitratemp4.mp4" type="video/mp4"> 
+                <source src="video/los_narcos_low_bitratemp4 (1).mp4" type="video/mp4"> 
                 Your browser does not support the video tag or format.
             </video>
         </article>
